Mudando a cor secundária para laranja

--- a/NoFood.Ionic/src/theme/variables.scss
+++ b/NoFood.Ionic/src/theme/variables.scss
@@ -35,7 +35,7 @@ $app-direction: ltr;
 
 $colors: (
   primary:    #BD081C,
-  secondary:  #32db64,
+  secondary:  #FEB002,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222
