Alterando o background do app para cinza claro

--- a/NoFood.Ionic/src/theme/variables.scss
+++ b/NoFood.Ionic/src/theme/variables.scss
@@ -36,6 +36,7 @@ $app-direction: ltr;
 $colors: (
   primary:    #BD081C,
   secondary:  #FEB002,
+  background: #F8F8F8,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222
